[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/Board.gd" type="Script" id=1]
[ext_resource path="res://materials/Grid.material" type="Material" id=2]

[sub_resource type="CubeMesh" id=1]

size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=2]

roughness = 0.0

[sub_resource type="PlaneMesh" id=3]

size = Vector2( 1, 1 )

[sub_resource type="CubeMesh" id=4]

size = Vector3( 1, 1, 1 )

[sub_resource type="SpatialMaterial" id=5]

roughness = 0.0

[sub_resource type="SpatialMaterial" id=6]

roughness = 0.0

[node name="Board" type="Spatial"]
script = ExtResource( 1 )
board_scale = 10.0

[node name="VolumeMesh" type="MeshInstance" parent="."]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="SurfaceMesh" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="PieceTable0" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="PieceTable1" type="MeshInstance" parent="."]
mesh = SubResource( 4 )
material/0 = SubResource( 6 )

